--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,17 @@
-/*
- * Copyright © 2025 Taggerkov
- * Licensed under the MIT License. See LICENSE file in: https://github.com/Taggerkov/openpokedex, for full license information.
- */
+/* GENERAL SETTINGS + HEADER & FOOTER
+   - Author: Taggerkov */
 
 /* App Structure */
+body {
+    margin: 0;
+}
+
 .app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: var(--colorBackground);
+    will-change: contents;
 }
 
 .main {
@@ -18,30 +22,35 @@
 /* Header and Navigation */
 .header {
     display: flex;
-    justify-content: center;
     padding: 1rem;
+    background-color: var(--colorMain);
+    color: var(--colorContrast);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    animation: slideInFromTop 0.5s ease-in-out;
+    will-change: transform;
 }
 
 .nav-main {
     display: flex;
     align-items: center;
     width: 100%;
-    max-width: 75rem;
-    gap: 2rem;
 }
 
 .site-title {
     font-weight: bold;
     text-decoration: none;
-    font-size: 1.2rem;
-    color: inherit;
+    font-size: 1.5rem;
     white-space: nowrap;
+    margin-left: 1rem;
+    color: var(--colorContrast);
 }
 
 .nav-links {
     display: inherit;
     gap: 1rem;
     white-space: nowrap;
+    width: 80%;
+    justify-content: center;
 }
 
 .nav-links a {
@@ -50,6 +59,12 @@
     color: inherit;
     padding: 0.4rem 0.6rem;
     overflow: hidden;
+    transition: all 0.6s ease-out;
+}
+
+.nav-links a:hover {
+    color: var(--colorHover);
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .nav-links a::after {
@@ -61,21 +76,33 @@
     transform-origin: center;
     width: 100%;
     height: 2px;
-    background-color: #333;
+    background-color: var(--colorContrast);
     transition: transform 0.3s ease;
 }
 
 .nav-links a:hover::after {
     transform: translateX(-50%) scaleX(1);
+    background-color: var(--colorHover);
+}
+
+.nav-links a:active {
+    color: var(--colorActive);
+    font-weight: bold;
+}
+
+.nav-links a:active::after {
+    transform: translateX(-50%) scaleX(1);
+    background-color: var(--colorActive);
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 /* Footer */
 .footer {
     padding: 1rem;
     font-size: 0.9rem;
-    color: #555;
-    border-top: 1px solid #ddd;
-    background-color: #f8f8f8;
+    color: var(--colorContrast);
+    background-color: var(--colorMain);
+    animation: fadeIn 0.5s;
 }
 
 /* Utilities */
