--- a/src/styles/pages/login.css
+++ b/src/styles/pages/login.css
@@ -1,1 +1,75 @@
-/* TODO */
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.login-page {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+
+.login-left,
+.login-right {
+    width: 50%;
+    height: 100%;
+}
+
+.login-left {
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    box-sizing: border-box;
+}
+
+.login-left h2 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #333;
+}
+
+.login-left form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.login-left input {
+    padding: 10px 15px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+}
+
+.login-left button {
+    background-color: #14532d;
+    color: white;
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.login-left button:hover {
+    background-color: #0f4223;
+}
+
+/* Image styling */
+.login-right {
+    overflow: hidden;
+}
+
+.login-right img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
