--- a/src/styles/pages/preset.css
+++ b/src/styles/pages/preset.css
@@ -88,7 +88,7 @@
     }
   
   .delete-btn {
-    position: absolute;
+   
     top: 10px;
     right: 10px;
     border-radius: 10px;
@@ -99,6 +99,12 @@
     font-size: 0.8rem;
   
   }
+    .delete-btn-wrapper {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 2;
+    }
   
   .preset-info {
     padding: 1rem;
