--- a/src/styles/components/delete_pop_up.css
+++ b/src/styles/components/delete_pop_up.css
@@ -10,36 +10,45 @@
 
 .pop_up {
     background: white;
+    color: #4A4A4A;
     padding: 24px;
     border-radius: 12px;
     width: 320px;
     text-align: center;
 }
-
+.pop-up-heading {
+    color: #b04343;
+}
 .pop_up-icon {
     font-size: 40px;
     margin-bottom: 8px;
 }
-
+.pop_up-text{
+    text-align: center;
+    color: black;
+}
 .pop_up-buttons {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
 }
-
-.cancel-btn {
-    background: #e0e0e0;
+.pop-cancel-btn,
+.pop-delete-btn {
+    font-weight: bold;
+    font-size: 16px;
     padding: 10px 20px;
-    border: none;
     border-radius: 8px;
     cursor: pointer;
+    border: none;
+}
+.pop-cancel-btn {
+    background: #e0e0e0;
+    color:#4A4A4A;
+    
 }
 
-.delete-btn {
+.pop-delete-btn {
     background: #b04343;
     color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
+  
 }
